--- a/bundle/pom.xml
+++ b/bundle/pom.xml
@@ -65,6 +65,10 @@
 			<artifactId>org.apache.sling.models.api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.sling</groupId>
+			<artifactId>org.apache.sling.commons.json</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 		</dependency>
